$ data sources with split js file.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Data Explorer</title>
-    <script src="games_db.js"></script>
+    <script src="data_chunks/games_db_part_1.js"></script>
+    <script src="data_chunks/games_db_part_2.js"></script>
+    <script src="data_chunks/games_db_part_3.js"></script>
+    <script src="data_chunks/games_db_part_4.js"></script>
     <style>
         :root {
             --bg-dark: #121212;
